# rust_flipit

./: .gitignore  Cargo.toml  README.md  build.rs
src/: display_type.rs  gdi_helpers.rs  ini_file.rs  location.rs  main.rs  resources.rs  screensaver_window.rs  settings.rs  settings_window.rs  timezone_data.rs
